# bfx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  install_win.ps1
.github/workflows/: build.yaml  test_secrets.yaml
src/: cli.rs  client.rs  deserializer.rs  error.rs  funding.rs  lib.rs  main.rs  trading.rs  utils.rs
